Restructurings and first multitenancy preparations.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = ./inventory.ini
 roles_path = ./roles
+playbook_dir = ./playbooks
 forks = 20
 gathering = smart
 fact_caching = jsonfile
