--- a/host_vars/examples/jitsi_docker.yml.sample
+++ b/host_vars/examples/jitsi_docker.yml.sample
@@ -1,4 +1,5 @@
-# Jitsi
+jitsi_install_user: "{{ default_user }}"
+jitsi_install_path: "{{ default_install_path }}"
 jitsi_public_url: https://meet.example.com
 jitsi_docker_host_address: "{{ ansible_host }}"
 jitsi_exposed_http_port: 8000
