--- a/site.yml
+++ b/site.yml
@@ -1,9 +1,10 @@
 ---
 # Deploy all the things
 
-- import_playbook: common.yml
-- import_playbook: docker.yml
-- import_playbook: nextcloud.yml
-- import_playbook: collabora-online.yml
-- import_playbook: jitsi.yml
-- import_playbook: cryptpad.yml
+- import_playbook: playbooks/common.yml
+- import_playbook: playbooks/docker.yml
+- import_playbook: playbooks/traefik.yml
+- import_playbook: playbooks/nextcloud.yml
+- import_playbook: playbooks/collabora-online.yml
+- import_playbook: playbooks/jitsi.yml
+- import_playbook: playbooks/cryptpad.yml
