--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
 - import_playbook: playbooks/common.yml
 - import_playbook: playbooks/docker.yml
 - import_playbook: playbooks/traefik.yml
+- import_playbook: playbooks/grafana.yml
 - import_playbook: playbooks/nextcloud.yml
 - import_playbook: playbooks/collabora-online.yml
 - import_playbook: playbooks/jitsi.yml
