--- a/roles/jsydll.grafana-docker/meta/main.yml
+++ b/roles/jsydll.grafana-docker/meta/main.yml
@@ -21,7 +21,7 @@ galaxy_info:
   - docker
   - traefik
 
-dependencies:
-- geerlingguy.docker
-- jotbe.traefik-docker
+dependencies: []
+  #- geerlingguy.docker
+  #- jotbe.traefik-docker
   
